5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1715_3037.log
== TEST (2019-05-02 16:11:56) 
-- CODE:
x = int(input(""))
if (x <= -1):
-- ERROR:
File "XXXX", line 3
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:12:53) 
-- CODE:
x = int(input(""))
if (x**, x <= -1):
	print(x)
-- ERROR:
File "XXXX", line 2
    if (x**, x <= -1):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:12:59) 
-- CODE:
x = int(input(""))
if (x** x <= -1):
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input(""))
ValueError: invalid literal for int() with base 10: '-1.99'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:13:13) 
-- CODE:
x = int(input(""))
if (x** x <= -1):
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input(""))
ValueError: invalid literal for int() with base 10: '-1.99'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:14:17) 
-- CODE:
x = int(input(""))
if (x** and x <= -1):
	print(x, round(x, 4))
-- EXECUTION TIME:
0.148237
-- ERROR:
  File "/home/codebench/codes/1715/3037/main.py", line 2
    if (x** and x <= -1):
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:14:18) 
-- CODE:
x = int(input(""))
if (x** and x <= -1):
	print(x, round(x, 4))
-- ERROR:
File "XXXX", line 2
    if (x** and x <= -1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:15:22) 
-- CODE:
x = int(input(""))
if (x <= -1):
	print(x, round(x, 4))
elif (1 < x< 0):
	print(x, round(x, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input(""))
ValueError: invalid literal for int() with base 10: '-1.99'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:16:23) 
-- CODE:
x = int(input(""))
if (x <= -1):
	print(x, round(x, 4))
elif (1 < x< 0):
	print(x, round(x, 4))
elif (x = 0):
	print(x, round(x, 4))
else:
-- ERROR:
File "XXXX", line 6
    elif (x = 0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:16:33) 
-- CODE:
x = int(input(""))
if (x <= -1):
	print(x, round(x, 4))
elif (1 < x< 0):
	print(x, round(x, 4))
elif (x = 0):
	print(x, round(x, 4))
else:
	print("")
-- ERROR:
File "XXXX", line 6
    elif (x = 0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:16:56) 
-- CODE:
x = int(input(""))
if (x <= -1):
	print(x, round(x, 4))
elif (1 < x < 0):
	print(x, round(x, 4))
elif (x = 0):
	print(x, round(x, 4))
else:
-- ERROR:
File "XXXX", line 6
    elif (x = 0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:17:02) 
-- CODE:
x = int(input(""))
if (x <= -1):
	print(x, round(x, 4))
elif (1 < x < 0):
	print(x, round(x, 4))
elif (x = 0):
	print(x, round(x, 4))
-- ERROR:
File "XXXX", line 6
    elif (x = 0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:17:18) 
-- CODE:
x = int(input(""))
if (x <= -1):
	print(x, round(x, 4))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input(""))
ValueError: invalid literal for int() with base 10: '-1.99'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:18:23) 
-- CODE:
x = int(input(""))
if (x <= -1):
	print(x, round(x, 4))
elif (-1 < x < 0):
	print(x, round(x, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input(""))
ValueError: invalid literal for int() with base 10: '-1.99'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:18:52) 
-- CODE:
x = int(input(""))
if (x <= -1):
	print(x, round(x, 4))
elif (-1 < x < 0):
	print(x, round(x, 4))
elif (x = 0):
	print(x, round(x, 4))
-- ERROR:
File "XXXX", line 6
    elif (x = 0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:18:55) 
-- CODE:
x = int(input(""))
if (x <= -1):
	print(x, round(x, 4))
elif (-1 < x < 0):
	print(x, round(x, 4))
elif (x = 0):
	print(x, round(x, 4))
-- ERROR:
File "XXXX", line 6
    elif (x = 0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:19:16) 
-- CODE:
x = int(input(""))
if (x <= -1):
	print(x, round(x, 4))
elif (-1 < x < 0):
	print(x, round(x, 4))
else:
-- ERROR:
File "XXXX", line 7
    
         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:19:46) 
-- CODE:
x = int(input(""))
if (x <= -1):
	print(x, round(x, 4))
elif (-1 < x < 0):
	print(x, round(x, 4))
elif (x = 0):
	print(x)
-- ERROR:
File "XXXX", line 6
    elif (x = 0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:19:58) 
-- CODE:
x = int(input(""))
if (x <= -1):
	print(x, round(x, 4))
elif (-1 < x < 0):
	print(x, round(x, 4))
elif (x => 0):
	print(x)
-- ERROR:
File "XXXX", line 6
    elif (x => 0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:20:08) 
-- CODE:
x = int(input(""))
if (x <= -1):
	print(x, round(x, 4))
elif (-1 < x < 0):
	print(x, round(x, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input(""))
ValueError: invalid literal for int() with base 10: '-1.99'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:28:02) 
-- CODE:
x = int(input(""))
if (x <= -1):
	print(x, round(x, 4))
elif (-1 < x < 0):
	print(x, round(x, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input(""))
ValueError: invalid literal for int() with base 10: '-1.99'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:28:12) 
-- CODE:
x = int(input(""))
if (x**2):
	x =< -1
	print(x, round(x, 4))
elif (-1 < x < 0):
	print(x, round(x, 4))
-- ERROR:
File "XXXX", line 3
    x =< -1
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:28:22) 
-- CODE:
x = int(input(""))
if (x**2):
	d =< -1
	print(x, round(x, 4))
elif (-1 < x < 0):
	print(x, round(x, 4))
-- ERROR:
File "XXXX", line 3
    d =< -1
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:28:30) 
-- CODE:
x = int(input(""))
if (x**2):
	print(x, round(x, 4))
elif (-1 < x < 0):
	print(x, round(x, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input(""))
ValueError: invalid literal for int() with base 10: '-1.99'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:28:43) 
-- CODE:
x = int(input(""))
if (x**2):
	print(x, round(x, 4))
elif (-1 < x < 0):
	print(x, round(x, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input(""))
ValueError: invalid literal for int() with base 10: '-1.99'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
